--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
                         <a href="#!">Phone: +91 70424 82721</a>
                     </div>
                     <div class="col-lg-4 text-lg-right">
-                        Powered by <a class="mr-3" href="https://theyellowpanda.in/">The Yellow Panda</a>
+                        Powered by <a class="mr-3" target="_blank"  href="https://theyellowpanda.in/">The Yellow Panda</a>
                     </div>
                 </div>
             </div>
