--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
                     </div>-->  
                     <div class="col-lg-4 my-3 my-lg-0 contactnsib">
                         <a href="mailto:info@nsib.in">Mail: info@nsib.in</a><br/>
-                        <a href="#!">Phone: +91 70424 82721</a>
+                        <a href="tel:+917042482721">Phone: +91 70424 82721</a>
                     </div>
                     <div class="col-lg-4 text-lg-right">
                         Powered by <a class="mr-3" target="_blank"  href="https://theyellowpanda.in/">The Yellow Panda</a>
