--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en-IN">
   <head>
-    <title>Page not found!</title>
+    <title>Page Under Development</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
@@ -17,7 +17,8 @@
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
-  <body> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <div align="center">Page Under Development<br><br>Powered by <a href="http://theyellowpanda.in">The Yellow Panda</a></div>
+  <style>body,html{background-color:#f8fc27;}</style>
+  <body> <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <div align="center"><h3>Page Under Development</h3>Powered by <a href="http://theyellowpanda.in">The Yellow Panda</div>
   </body>
 </html>
